--- a/Descriptive_Statistics/lesson.yaml
+++ b/Descriptive_Statistics/lesson.yaml
@@ -120,8 +120,7 @@ variable that comes after me'"
   Hint: 'Remember how we accessed the single column boys from the data frame.'
 
 - Class: mult_question
-  Output: Would you like to submit the log of this lesson to Google Forms so
-    that your instructor may evaluate your progress?
+  Output: Would you like to submit the log of this lesson to Google Forms so that your instructor may evaluate your progress?
   AnswerChoices: Yes;No
   CorrectAnswer: NULL
   AnswerTests: submit_log()
